--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,20 @@
         "phpunit/phpunit": "^5.0",
         "satooshi/php-coveralls": "^1.0"
     },
-  
+   "autoload": {
+        "psr-4": {
+            "Base32\\": "application/libraries"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Base32\\": "tests/"
+        }
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.1.x-dev"
         }
     }
 }
+
